src/test/deca/syntax/parser/invalid/instance_of_string.deca
// Test parser, instanceof doit prendre un IDENT, une string n'est pas un ident

{
    x instanceof "string";
}